Fixed Overlay effect on mobile view

--- a/attendance/static/scss/style.scss
+++ b/attendance/static/scss/style.scss
@@ -188,6 +188,7 @@ body {
     position: fixed;
     width: 100%;
     height: 100%;
+    display: none;
     top: 0;
     left: 0;
     right: 0;
